<resources>
    <string name="app_name" translatable="false">Shiny Inu</string>
    <string name="button_shiny">Make my day shiny!</string>
    <string name="app_loading">Please, wait...</string>
    <string name="default_image_description">This is original image</string>
    <string name="menu_option_save">Save to the gallery</string>
    <string name="menu_option_exit">Exit</string>
    <string name="menu_option_share">Share via app</string>
    <string name="menu_option_open">Open favourite</string>
    <string name="share_message">Hey, look at this cutie! It made my day shiny and may make yours too. See on github: https://github.com/DanielPancake/shinyinu</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_about">About</string>
    <string name="share_title">Choose an app</string>
    <string name="check_box_show_again">Do not show again</string>
    <string name="menu_option_delete">Delete (Can\'t be undone)</string>
    <string name="permission_granted">Permission granted. Awof!</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="clear_saved_images">Clear Saved Images</string>
    <string name="calculating">Calculating...</string>
    <string name="clear_description">Clearing saved images will remove local files of all images which had been added to favourite list, meaning that you will be able to re-download them later.</string>
    <string name="delete_database">Delete database</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="title_bookmarked">Bookmarked</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="menu_option_remove">Remove</string>
    <string name="woof">Woof!</string>
    <string name="saved">Saved!</string>
    <string name="saved_already">Already saved</string>
    <string name="close_app">Are you sure you want to close the app?</string>
    <string name="no_internet">No available images to show. No internet connection!</string>
    <string name="errror">Error occurred!</string>
    <string name="favourite">Added to favourite!</string>
    <string name="favourite_already">Already added to favourite</string>
    <string name="megabytes">MB</string>
    <string name="kilobytes">KB</string>
    <string name="title_settings">Settings</string>
    <string name="saved_images">Saved images</string>
    <string name="can_be_cleared">Can be cleared</string>
    <string name="nothing_to_show">Nothing to show yet</string>
    <string name="made">Made by</string>
    <string name="intro_title_01">Look, a Shiba!</string>
    <string name="intro_title_02">It is so shiny</string>
    <string name="intro_title_03">Interesting button</string>
    <string name="intro_text_01">You can double click on the image to add it to the favourite!</string>
    <string name="intro_text_02">Want to share with friends? Hold the image to do that.</string>
    <string name="intro_text_03">You wonder what it does? It shows new image of course.</string>
    <string name="delete_description">Deleting database will clear list of favourite images. Notice that this action cannot be undone! Database cannot be entirely empty, so its size will not reach zero.</string>
    <string name="undo">Undo</string>
</resources>
